add stepper, firebase

--- a/week1/health-pricing/public/index_back_up.html
+++ b/week1/health-pricing/public/index_back_up.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--nvd3-->
-    <!--<script src = "https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.min.js"></script>-->
+    <script src = "https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.6/nv.d3.css" rel="stylesheet" type="text/css">
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
 
 
     <!--
@@ -19,8 +17,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
-
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
